update SPLat